--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
     <link rel="manifest" href="./favicon/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 <body>
-    <p>CONTENT</p>
+    <main>
+        <section class="container">
+            <div class="row-short">
+                HERO
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="row">
+                MAIN
+            </div>
+        </section>
+    </main>
+
+    <footer class="container">
+        <div class="row">
+            SOCIALS
+        </div>
+        <div class="row-short">
+            FOOTER BOTTOM TEXTS
+        </div>
+    </footer>
 </body>
 </html>
 
