--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <main>
         <section class="container">
             <div class="row-short">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla facere quisquam, voluptate sequi repellat esse possimus quos molestiae neque molestias quidem labore exercitationem animi magnam suscipit in quis vitae ea rem dolores aut nobis laborum! Necessitatibus, quibusdam ab repudiandae minima reiciendis nulla esse expedita enim suscipit mollitia voluptates aliquid. Quasi accusantium optio ipsa cumque dolore quidem. Praesentium fuga distinctio similique quo, inventore sint rem quaerat odit dolorem quam magnam sequi nemo vitae deleniti, commodi, saepe voluptates quod eius illo a laudantium? Ipsa voluptatibus laboriosam, architecto illo provident animi, maiores dolorem laborum dolorum saepe inventore praesentium dignissimos a cum, odit sit delectus sequi laudantium nisi recusandae repellendus ut perferendis possimus? Dolor laborum id adipisci dolores a vel quasi magni neque voluptates quidem delectus ad eaque, esse quam? Facere error accusantium hic quasi mollitia eius ad deleniti illum soluta a! Facilis ipsa officia at tempora nam voluptate veniam quidem exercitationem ratione deleniti neque vero tenetur, enim esse itaque magnam est et cumque rerum, rem doloribus vel inventore beatae quos? Vitae dignissimos, quisquam, corrupti nihil perspiciatis quasi adipisci animi soluta veritatis iusto velit possimus molestiae minima cupiditate ipsum ut voluptatibus porro architecto natus! Dolores voluptas perferendis nobis officia amet placeat similique aspernatur natus?
+               HERO
             </div>
         </section>
 
         <section class="container">
             <div class="row">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus repellat iste animi quod incidunt similique tenetur quaerat aspernatur beatae tempore eum quia voluptas eaque nam, ipsum aut, tempora distinctio inventore, ut odio consequuntur in ipsa? Perspiciatis earum, eligendi vitae culpa nobis illo illum esse quod amet hic porro dolores eius, dolore distinctio sint dicta? Nulla est sed veniam! Omnis, illum debitis assumenda laudantium et culpa in voluptas nostrum, facilis ut doloremque voluptatum fugit magni vero error, quae quaerat similique magnam adipisci facere quidem consectetur. Nihil error reprehenderit facilis mollitia odio in tenetur distinctio sequi, veniam modi quae voluptate impedit placeat iste corrupti inventore a totam fuga culpa ratione enim amet reiciendis! Nisi quis sed quae blanditiis vitae, est consequuntur magni, facere eius ipsa suscipit iste nobis consectetur doloribus soluta dolorum libero illo! Unde fuga id sapiente repellat earum voluptatibus enim eos ex suscipit maxime doloribus sunt inventore autem repudiandae quae debitis totam laudantium, sit facilis culpa, dignissimos, nisi reprehenderit? Beatae aut nostrum laboriosam et molestiae maiores facilis eius ipsa iure voluptate aspernatur recusandae eum quos at, incidunt accusamus explicabo, veniam cum vero. Praesentium ut explicabo natus saepe provident magnam doloribus soluta dolores id voluptatibus vitae, quos repellendus debitis rem suscipit!
+                <div class="column-left">LEFT</div>
+                <div class="column-right">RIGTH</div>
             </div>
         </section>
     </main>
