--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <section class="container">
             <div class="row">
-                <div class="column-left">LEFT</div>
-                <div class="column-right">RIGTH</div>
+                <div class="column">Main content: LEFT</div>
+                <div class="column column-right">Main content: RIGTH</div>
             </div>
         </section>
     </main>
