--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main>
-        <section class="container">
+        <section class="container bg-main">
             <div class="row-short">
                HERO
             </div>
@@ -30,7 +30,7 @@
         </section>
     </main>
 
-    <footer class="container">
+    <footer class="container bg-main">
         <div class="row">
             SOCIALS
         </div>
