--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 </head>
 <body>
     <main>
-        <section class="container bg-main">
+        <section class="container bg-main hero">
             <div class="row-short">
-               HERO
+               <img class="logo" src="./img/logo.png" alt="Logo">
+               <h1 class="main-title">COMING SOON</h1>
+               <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Assumenda distinctio rem nesciunt nam, doloremque aut.</p>
             </div>
         </section>
 
