--- a/index.html
+++ b/index.html
@@ -27,8 +27,26 @@
 
         <section class="container">
             <div class="row">
-                <div class="column">Main content: LEFT</div>
-                <div class="column column-right">Main content: RIGTH</div>
+                <div class="column">
+                <h2 class="column-title">About startup</h2>
+                <p class="column-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eligendi quia ipsam adipisci rerum est <a href="#" target="_blank">Matrox</a> delectus voluptatibus fugiat 
+                    quo ipsum!</p>
+                <div class="progress-bar-group">
+                    <div class="progress-bar">PROGRESS BAR 1</div>
+                    <div class="progress-bar">PROGRESS BAR 2</div>
+                    <div class="progress-bar">PROGRESS BAR 3</div>
+                </div>
+                </div>
+                <div class="column column-right">
+                <h2 class="column-title">Have any question?</h2>
+                <p class="column-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Cupiditate, <a href="mailto:######@beta-gmail.xyz">######@beta-gmail.xyz</a>. Aut earum, illo eius velit minus nihil eos ipsa 
+                    libero, voluptate qui quas maxime. Dolor.</p>
+                    <form>
+                        MESSAGE FORM
+                    </form>
+                </div>
             </div>
         </section>
     </main>
