--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
                <h1 class="main-title">COMING SOON</h1>
                <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Assumenda distinctio rem nesciunt nam, doloremque aut.</p>
+                <div class="clock">
+                    <div class="time">
+                        <div class="value">432</div>
+                        <div class="label">Days</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">09</div>
+                        <div class="label">Hours</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">37</div>
+                        <div class="label">Minutes</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">39</div>
+                        <div class="label">Seconds</div>
+                    </div>
+                </div>
             </div>
         </section>
 
