--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                     Eligendi quia ipsam adipisci rerum est <a href="#" target="_blank">Matrox</a> delectus voluptatibus fugiat 
                     quo ipsum!</p>
                 <div class="progress-bar-group">
-                    <div class="progress-bar">PROGRESS BAR 1</div>
+                    <div class="progress-bar">
+                            <div class="progress-bar">
+                                <div class="top">
+                                    <p class="title">UX design</p>
+                                    <p class="value">90%</p>
+                                </div>
+                            </div>
+                            <div>
+                                
+                            </div>
                     <div class="progress-bar">PROGRESS BAR 2</div>
                     <div class="progress-bar">PROGRESS BAR 3</div>
                 </div>
