--- a/index.html
+++ b/index.html
@@ -52,18 +52,30 @@
                     quo ipsum!</p>
                 <div class="progress-bar-group">
                     <div class="progress-bar">
+                        <div class="top">
+                            <p class="title">UX design</p>
+                            <p class="value">90%</p></div>
+                        <div class="bottom">
+                            <div class="progress"></div>
+                        </div>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="top">
+                                <p class="title">Web design</p>
+                                <p class="value">86%</p></div>
+                            <div class="bottom">
+                                <div class="progress"></div>
+                            </div>
+                            </div>
                             <div class="progress-bar">
                                 <div class="top">
-                                    <p class="title">UX design</p>
-                                    <p class="value">90%</p>
+                                    <p class="title">Web development</p>
+                                    <p class="value">50%</p></div>
+                                <div class="bottom">
+                                    <div class="progress"></div>
                                 </div>
-                            </div>
-                            <div>
-                                
-                            </div>
-                    <div class="progress-bar">PROGRESS BAR 2</div>
-                    <div class="progress-bar">PROGRESS BAR 3</div>
-                </div>
+                                </div>
+                    </div>
                 </div>
                 <div class="column column-right">
                 <h2 class="column-title">Have any question?</h2>
