--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <p class="title">UX design</p>
                             <p class="value">90%</p></div>
                         <div class="bottom">
-                            <div class="progress"></div>
+                            <div class="progress" style="width: 90%;"></div>
                         </div>
                         </div>
                         <div class="progress-bar">
@@ -64,7 +64,7 @@
                                 <p class="title">Web design</p>
                                 <p class="value">86%</p></div>
                             <div class="bottom">
-                                <div class="progress"></div>
+                                <div class="progress" style="width: 86%;"></div>
                             </div>
                             </div>
                             <div class="progress-bar">
@@ -72,7 +72,7 @@
                                     <p class="title">Web development</p>
                                     <p class="value">50%</p></div>
                                 <div class="bottom">
-                                    <div class="progress"></div>
+                                    <div class="progress" style="width: 50%;"></div>
                                 </div>
                                 </div>
                     </div>
