Base footer styles

--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
 
         </div>
         <div class="row-short">
-            FOOTER BOTTOM TEXTS
+            <img src="./img/logo-white.png" alt="Logo" class="logo-white">
+
+            <p class="text-trio">
+                <span>Copyright (c) 2023 <a href="#">Matrox</a></span>
+                <span>All rights reserved</span>
+                <span>Designed by <a href="#" target="_blank">TrendyTheme</a></span>
+            </p>
+            <p class="footer-bottom">
+                Lorem ipsum dolor 
+                sit amet consectetur adipisicing elit. Vero sit quae, autem iste rem accusantium.
+            </p>
         </div>
     </footer>
 </body>
