--- a/index.html
+++ b/index.html
@@ -103,16 +103,18 @@
 
         </div>
         <div class="row-short">
-            <img src="./img/logo-white.png" alt="Logo" class="logo-white">
+            <img class="logo-white" src="./img/logo-white.png" alt="Logo">
 
             <p class="text-trio">
                 <span>Copyright (c) 2023 <a href="#">Matrox</a></span>
+                <span class="line"></span>
                 <span>All rights reserved</span>
+                <span class="line"></span>
                 <span>Designed by <a href="#" target="_blank">TrendyTheme</a></span>
             </p>
             <p class="footer-bottom">
                 Lorem ipsum dolor 
-                sit amet consectetur adipisicing elit. Vero sit quae, autem iste rem accusantium.
+                sit  <a href="#">200+</a> consectetur adipisicing elit. Vero sit quae, autem iste rem  <a href="#">Matrox</a>.
             </p>
         </div>
     </footer>
