--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 <body>
     <main>
         <section class="container bg-main hero">
+            <div class="row">
+                <button class="btn">Click me</button>
+                <a href="#" class="btn">Click me</a>
+                <p class="btn">Click me</p>
+                <span class="btn">Click me</span>
+                <div class="btn">Click me</div>
+            </div>
             <div class="row-short">
                <img class="logo" src="./img/logo.png" alt="Logo">
                <h1 class="main-title">COMING SOON</h1>
